--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,6 @@ vignettes/*.pdf
 
 # Shiny token, see https://shiny.rstudio.com/articles/shinyapps.html
 rsconnect/
+
+# API key for Yelp Fusion API and Google API
+*api_key.R
